[package]
name = "lgsttracker"
version = "0.1.0"
authors = ["Py4mac <boisbu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.0.0"
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15.0"
config = "0.10.1"